feat: ajustes calculo ip
