# routes/api.php
@@ -31,6 +31,8 @@ Route::resource('office', OfficeController::class);
 Route::resource('person', PersonController::class);
 Route::resource('legal-process', ProcessController::class);
 Route::get('legal-process-export', [ProcessController::class, 'export']);
+Route::post('provision-simulate', [ProcessController::class, 'provisionSimulate']);
+
 
 Route::resource('value-process', ProcessValueController::class);
 Route::resource('common', ParameterController::class);
